--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-	<meta name="description" content="JOHO TAROのポートフォリオサイトです" />
+	<meta name="description" content="GIDO RYOのポートフォリオサイトです" />
 	<title>PORTFOLIO</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined" rel="stylesheet">
 	<link href="portfolio/css/ress.css" media="all" rel="stylesheet" type="text/css" />
 	<link href="portfolio/css/style.css" media="all" rel="stylesheet" type="text/css" />
-	<link rel="shortcut icon" href="portfolio/img/favicon.ico" />
+	<link rel="shortcut icon" href="portfolio/img/favicon.png" />
 </head>
 
 <body>
@@ -36,15 +36,15 @@
 			<!-- main-visual -->
 			<div class="main-visual" id="about">
 				<div class="main-visual-inner">
-					<p class="main-visual-title">GIDO RYO</p>
-					<p class="main-visual-subtitle">PORTFOLIO</p>
+					<img class ="logo" src="portfolio/img/logo.png" alt ="PORTFOLIO" >
 					<div class="main-visual-profile">
 						<p class="main-visual-img">
 							<img src="portfolio/img/profile.png" alt="自画像" />
 						</p>
 						<p class="main-visual-text">
-							開校53年の経験とノウハウがあり、<br class="sp-only">他校ではマネのできない実績。<br>
-							HCSなら、即戦力になるためのスキルが<br class="sp-only">ガッチリ身につきます。<br>
+							HTMLを習って作ってみたけど難しい。
+							<br class="sp-only">ドライブに行きたいけど車を持っていないから行けない。<br>
+							最近はやっているゲームは<br class="sp-only">Valorant!!<br>
 						</p>
 					</div>
 				</div>
