--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<img src="portfolio/img/profile.png" alt="自画像" />
 						</p>
 						<p class="main-visual-text">
-							HTMLを習って作ってみたけど難しい。
+							HTMLを習って作ってみたけど難しい。<br>
 							<br class="sp-only">ドライブに行きたいけど車を持っていないから行けない。<br>
 							最近はやっているゲームは<br class="sp-only">Valorant!!<br>
 						</p>
@@ -94,27 +94,31 @@
 					<h2 class="title">SKILL</h2>
 					<div class="skill-list">
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/icon_skill.png" alt=""></p>
+							<section>
+								<p class="skill-img"><img src="portfolio/img/css-3.svg" alt=""></p>
+								<p class="second"><img src="portfolio/img/html-5.svg" alt=""></p>
+							</section>
 							<div class="skill-body">
 								<h3 class="skill-name">HTML5/CSS3</h3>
 								<p class="skill-text">
-									テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+									2021年冬から始めたHTML5とCSS3です。自分なりに考えて手探りではありますが、思ったように組むことができるようになってきました。</p>
 							</div>
+							
 						</div>
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/icon_skill.png" alt=""></p>
+							<p class="skill-img"><img src="portfolio/img/python.svg" alt=""></p>
 							<div class="skill-body">
 								<h3 class="skill-name">Python</h3>
 								<p class="skill-text">
-									テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+									2021年秋に始めたPythonです。一通り学習が終わり自分の思い通りに組むことができます。学習している間はとても楽しくPythonを学ぶことができました。</p>
 							</div>
 						</div>
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/icon_skill.png" alt=""></p>
+							<p class="skill-img"><img src="portfolio/img/java.svg" alt=""></p>
 							<div class="skill-body">
 								<h3 class="skill-name">Java</h3>
 								<p class="skill-text">
-									テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+									2021年冬から始めたJavaです。まだまだ未熟でなぜエラーが出ているのかなぜ正しい結果が出力されないのかを解決するのに時間がかかりますが、今後も学習を続けもっともっとできるようにしたいです。</p>
 							</div>
 						</div>
 						<div class="skill-item">
