--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
 							</div>
 						</div>
 						<div class="skill-item">
-							<p class="skill-img"><img src="portfolio/img/icon_skill.png" alt=""></p>
+							<p class="skill-img"><img src="portfolio/img/book.svg" alt=""></p>
 							<div class="skill-body">
 								<h3 class="skill-name">国家試験</h3>
 								<p class="skill-text">
-									テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
+									11月に基本情報技術者試験合格、2月から応用情報技術者試験の勉強スタート</p>
 							</div>
 						</div>
 					</div>
