--- a/lesson7/contact/index.html
+++ b/lesson7/contact/index.html
@@ -15,7 +15,7 @@
   <!-- ファビコン：お気に入りで表示されるアイコン -->
   <link rel="shortcut icon" href="../img/favicon.ico">
   <!-- スマートフォン、タブレットで使用されるアイコン -->
-  <link rel="apple-touch-icon" href="../img/apple-touch-icon.png">
+  <link rel="apple-touch-icon" href="../img/favicon.ico">
   <!-- リセットCSSの読み込み -->
   <link rel="stylesheet" href="../css/normalize.css">
   <!-- スタイルの読み込み -->
@@ -58,7 +58,7 @@
         <!-- 項目名 -->
         <label for="yourName" class="form-label">お名前</label>
         <!-- 入力欄：テキスト -->
-        <div>
+        <div class="form-col">
           <input type="text" name="お名前" id="yourName">
         </div>
       </div>
@@ -67,7 +67,7 @@
         <!-- 項目名 -->
         <label for="yourEmail" class="form-label">E-Mail</label>
         <!-- 入力欄：email -->
-        <div>
+        <div class="form-col">
           <input type="email" name="E-Mail" id="yourEmail">
         </div>
       </div>
@@ -76,7 +76,7 @@
         <!-- 項目名 -->
         <label for="yourInquiry" class="form-label">お問い合わせ内容</label>
         <!-- 入力欄：テキストエリア -->
-        <div>
+        <div class="form-col">
           <textarea name="お問い合わせ内容" id="yourInquiry" cols="30" rows="10"></textarea>
         </div>
       </div>
